# fastapi-localstack

./: .gitignore  docker-compose.yml  dockerfile  localstack.yml  pyproject.toml
app/: main.py
